AM_DEFAULT_SOURCE_EXT = .cpp

sbin_PROGRAMS = \
    linked-list \
    stack \
    palindrome \
    grandchild \
    two-sums \
    fibonacci

linked_list_SOURCES = \
    linked_list.cpp \
    linked_list_main.cpp

stack_SOURCES = \
    stack.cpp \
    stack_main.cpp

palindrome_SOURCES = \
    palindrome.cpp

grandchild_SOURCES = \
    grandchild.cpp

fibonacci_SOURCES = \
    fibonacci_main.cpp

two_sums_SOURCES = \
    two_sums.cpp
